# risteys

.github/workflows/: ci.yml
data-scripts/: kanta_lab_ref_ranges_table_combine.py
pipeline/endpoints/risteys_pipeline/: run_distributions.py  survival_analysis.py
pipeline/endpoints/risteys_pipeline/utils/: write_data.py
pipeline/kanta_lab/: .gitignore  LICENSE.txt  README.md  config.toml.example  pyproject.toml
pipeline/kanta_lab/src/kanta_risteys_pipeline/: config.py  log.py  main.py  stats.py
risteys-web-drugs/: pyproject.toml
risteys-web-drugs/data/: atc_groupings.jsonl  output
risteys-web-drugs/src/risteys_web_drugs/: server.py
risteys-web-drugs/src/risteys_web_drugs/static/: main.css
risteys-web-drugs/src/risteys_web_drugs/templates/: home.html  pheno.html
web/: README.adoc  import_ontology.exs  import_upset_plots.exs
web/assets/js/: app.js  plotting.ts
web/config/: dev.exs  runtime.exs  test.exs
web/lib/risteys/: codewas.ex  lab_test_stats.ex  lab_was.ex  omop.ex
web/lib/risteys/codewas/: codes.ex
web/lib/risteys/fg_endpoint/: definition.ex
web/lib/risteys/lab_test_stats/: qc_table.ex  reference_range_table.ex
web/lib/risteys/omop/: concept_relationship.ex
web/lib/risteys_web/controllers/: custom_html_helpers.ex  error_html.ex  fg_endpoint_controller.ex  lab_test_controller.ex  lab_test_html.ex
web/lib/risteys_web/live/: code_was_table.ex  code_was_table.html.heex  lab_was_table.ex  lab_was_table.html.heex  live_table.ex
web/priv/static/: robots.txt
web/priv/static/css/: app.css
web/test/risteys_web/: live_table_test.exs
(+14 files in other folders)
