[project]
name = "risteys-web-drugs"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Vincent", email = "vincent-octo@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
]

[project.scripts]
risteys-web-drugs = "risteys_web_drugs:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
data = { data = "data" }

[dependency-groups]
dev = [
    "ipython>=9.5.0",
]
